# vista-sdk

./: .gitignore  CMakeLists.txt
cpp/: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
cpp/benchmark/: BENCHMARK.md  BM_CodebooksLookup.cpp  BM_Gmod.cpp  BM_GmodPathParse.cpp  BM_GmodTraversal.cpp  BM_GmodVersioningConvertPath.cpp  BM_StringBuilder.cpp  BM_VISCacheEfficiency.cpp  CMakeLists.txt  CodebooksLookup.cpp  README.md  pch.h
cpp/benchmark/codebooks/: BM_CodebooksLookup.cpp
cpp/benchmark/datatypes/: BM_Decimal128.cpp  BM_Int128.cpp
cpp/benchmark/gmod/: BM_GmodLoad.cpp  BM_GmodLookup.cpp  BM_GmodPathParse.cpp  BM_GmodTraversal.cpp  BM_GmodVersioningConvertPath.cpp
cpp/benchmark/internal/: BM_HashMap.cpp  BM_ShortStringHash.cpp  BM_StringBuilderPool.cpp
cpp/cmake/: CMakeLists.txt  CompilersSettings.cmake  Config.cmake  Dependencies.cmake  Sources.cmake  dnv-vista-sdk-cpp-config.cmake.in  dnvVistaCppCompilersSettings.cmake  dnvVistaCppConfig.cmake  dnvVistaCppConfig.cmake.in  dnvVistaCppDependencies.cmake  dnvVistaCppSources.cmake  dnvVistaSdkCppBuildConfig.cmake  dnvVistaSdkCppDependencies.cmake  dnvVistaSdkCppEmbeddedResource.cmake  dnvVistaSdkCppEmbeddedSchemas.cmake  dnvVistaSdkCppEmbeddedTestData.cmake  dnvVistaSdkCppInstall.cmake  dnvVistaSdkCppPackaging.cmake  dnvVistaSdkCppResourceGenerator.cmake  dnvVistaSdkCppSources.cmake  dnvVistaSdkCppTargets.cmake  dnvVistaSdkCppVISVersionsGenerator.cmake  dnvVistaSdkCppVersion.rc.in  dnvVistaSdkCppVisVersionsGenerator.cmake  vista-sdk-cppConfig.cmake.in
cpp/doc/: CMakeLists.txt
cpp/include/dnv/vista/sdk/: ChdDictionary.h  ChdDictionary.inl  Codebook.h  Codebook.inl  CodebookName.h  CodebookName.inl  Codebooks.h  Codebooks.inl  CodebooksDto.h  EmbeddedResource.h  EmbeddedResource.inl  Exceptions.h  Gmod.h  Gmod.inl  GmodDto.h  GmodNode.h  GmodNode.inl  GmodPath.h  GmodPath.inl  GmodPathQuery.h  GmodPathQuery.inl  GmodVersioning.h  GmodVersioning.inl  GmodVersioningDto.h  GmodVersioningDto.inl  ImoNumber.h  ImoNumber.inl  LocalId.h  LocalId.inl  LocalIdBuilder.h  LocalIdBuilder.inl  Locations.h  (+25 more)
cpp/licenses/: LICENSE-nfx-cpp-essentials.txt  LICENSE-nfx-hashing
cpp/samples/: CMakeLists.txt  Sample_BasicUsage.cpp  Sample_Codebooks.cpp  Sample_GMOD.cpp  Sample_LocalId.cpp  Sample_TimeSeriesDataPackage.cpp  pch.h
cpp/samples/simple/: Sample_Codebooks.cpp  Sample_Gmod.cpp  Sample_GmodPath.cpp  Sample_GmodVersioning.cpp  Sample_ImoNumber.cpp  Sample_LocalId.cpp  Sample_Locations.cpp  Sample_Queries.cpp  Sample_UniversalId.cpp
cpp/src/: Codebook.cpp  Codebooks.cpp  CodebooksDto.cpp  EmbeddedResource.cpp  Gmod.cpp  GmodDto.cpp  GmodNode.cpp  GmodPath.cpp  GmodPathQuery.cpp  GmodVersioning.cpp  GmodVersioningDto.cpp  ImoNumber.cpp  LocalId.cpp  LocalIdBuilder.cpp  LocalIdQuery.cpp  LocationBuilder.cpp  Locations.cpp  LocationsDto.cpp  MetadataTag.cpp  MetadataTagsQuery.cpp  ParsingErrors.cpp  UniversalId.cpp  UniversalIdBuilder.cpp  VIS.cpp
cpp/src/EmbeddedResource/: EmbeddedResource.cpp  EmbeddedResource.h
cpp/src/EmbeddedSchemas/: EmbeddedSchemas.cpp  EmbeddedSchemas.h
cpp/src/EmbeddedTestData/: EmbeddedTestData.cpp  EmbeddedTestData.h
cpp/src/SDK/: Codebook.cpp  Codebooks.cpp  Gmod.cpp  GmodNode.cpp  GmodPath.cpp  GmodPathQuery.cpp  ImoNumber.cpp  LocalId.cpp  LocalIdBuilder.cpp  LocalIdQuery.cpp  LocationBuilder.cpp  Locations.cpp  MetadataTag.cpp  MetadataTagsQuery.cpp  ParsingErrors.cpp  StringBuilder.cpp  UniversalId.cpp  UniversalIdBuilder.cpp  VIS.cpp
cpp/src/SDK/dto/: CodebooksDto.h  GmodDto.h  GmodVersioningDto.h  ISO19848Dtos.h  LocationsDto.h
cpp/src/SDK/mqtt/: LocalId.cpp
cpp/src/SDK/parsing/: GmodParsePathResult.h  GmodPathParsing.h  LocalIdParsingErrorBuilder.cpp  LocalIdParsingErrorBuilder.h  LocationParsingErrorBuilder.cpp  LocationParsingErrorBuilder.h  LocationSetsVisitor.h
cpp/src/SDK/transport/: ShipId.cpp
cpp/src/SDK/versioning/: GmodVersioning.cpp  GmodVersioning.h
cpp/src/SourceGenerator/: ResourceGenerator.cpp  VISVersionsGenerator.cpp  VisVersionsGenerator.cpp
cpp/src/datatypes/: Decimal128.cpp
cpp/src/internal/: DynamicStringBufferPool.cpp  DynamicStringBuffer_impl.cpp  LocalIdParsingErrorBuilder.cpp  LocalIdParsingErrorBuilder.h  LocationParsingErrorBuilder.cpp  LocationParsingErrorBuilder.h  LocationSetsVisitor.h  StringBuilderPool.cpp
cpp/src/transport/: ISO19848.cpp  ISO19848Dtos.cpp  ShipId.cpp
cpp/src/transport/DataChannel/: DataChannel.cpp
cpp/src/transport/TimeSeriesData/: DataChannelId.cpp  TimeSeriesData.cpp
cpp/test/: CMakeLists.txt  TESTS_Codebook.cpp  TESTS_Codebooks.cpp  TESTS_Gmod.cpp  TESTS_GmodPath.cpp  TESTS_GmodPathQuery.cpp  TESTS_GmodVersioning.cpp  TESTS_GmodVersioningSmoke.cpp  TESTS_HashCompatibility.cpp  TESTS_ISOString.cpp  TESTS_ImoNumber.cpp  TESTS_LocalId.cpp  TESTS_LocalIdQuery.cpp  TESTS_Locations.cpp  TESTS_UniversalId.cpp  TESTS_VIS.cpp  TESTS_VISVersions.cpp  TESTS_VisVersions.cpp  TestDataLoader.cpp  TestDataLoader.h  pch.h
cpp/test/EmbeddedResource/: CMakeLists.txt  TESTS_EmbeddedResource.cpp
cpp/test/EmbeddedSchemas/: CMakeLists.txt  TESTS_EmbeddedSchemas.cpp
cpp/test/EmbeddedTestData/: CMakeLists.txt  TESTS_EmbeddedTestData.cpp
cpp/test/SDK/: TESTS_Codebook.cpp  TESTS_CodebookNames.cpp  TESTS_Codebooks.cpp  TESTS_Gmod.cpp  TESTS_GmodPath.cpp  TESTS_GmodVersioning.cpp  TESTS_ImoNumber.cpp  TESTS_LocalId.cpp  TESTS_LocalIdQuery.cpp  TESTS_Locations.cpp  TESTS_ParsingErrors.cpp  TESTS_UniversalId.cpp  TESTS_VIS.cpp  TESTS_VisVersions.cpp
cpp/test/StringBuilder/: TESTS_StringBuilder.cpp
cpp/test/datatypes/: TESTS_DateTime8601.cpp  TESTS_DateTimeISO8601.cpp  TESTS_Decimal128.cpp  TESTS_Int128.cpp
cpp/test/internal/: TESTS_StringBuilderPool.cpp
cpp/test/transport/: TESTS_DataChannelISOmessages.cpp  TESTS_DataChannelId.cpp  TESTS_ISO19848.cpp  TESTS_ShipId.cpp  TESTS_TimeSeriesISOmessages.cpp
cpp/test/utils/: TESTS_StringBuilderPoolTests.cpp
cpp/tools/: CMakeLists.txt  codebooks-cli.cpp  gmodexplorer-cli.cpp  json-validator-cli.cpp  localid-cli.cpp  locations-cli.cpp
(+165 files in other folders)
